# genoprobe

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.md  quickstart.md
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  installation.html  objects.inv  profiles.html  py-modindex.html  quickstart.html  search.html  searchindex.js  thermodynamics.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  installation.doctree  profiles.doctree  quickstart.doctree  thermodynamics.doctree
docs/_build/html/.doctrees/api/: index.doctree
docs/_build/html/.doctrees/commands/: index_cmd.doctree  panels.doctree  probes.doctree  screen.doctree  targets.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/genoprobe/: annotation.html  genome.html  indexing.html  matching.html  panels.html  paths.html  probes.html  profile_defaults.html  thermo.html
docs/_build/html/_sources/: installation.md.txt  profiles.md.txt  quickstart.md.txt  thermodynamics.md.txt
docs/_build/html/api/: index.html
docs/_build/html/commands/: index_cmd.html  panels.html  probes.html  screen.html  targets.html
docs/api/: index.rst
docs/commands/: index_cmd.md  probes.md  screen.md  targets.md
scripts/: release.py
src/genoprobe/: __init__.py  __main__.py  annotation.py  cli.py  genome.py  indexing.py  matching.py  panels.py  parallel.py  paths.py  probes.py  profile_defaults.py  reports.py  thermo.py
src/genoprobe/data/: profile_defaults.json
(+3 files in other folders)
